// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorState should render ErrorState 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "500",
        },
        Array [
          Object {
            "marginBottom": 8,
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    Something broke!
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": undefined,
          "fontSize": 14,
          "fontWeight": "400",
        },
        Array [
          Object {
            "marginBottom": 8,
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    An unknown error has occurred. Please try again later.
  </Text>
</View>
`;

exports[`ErrorState should render ErrorState with retry button and custom error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "500",
        },
        Array [
          Object {
            "marginBottom": 8,
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    Error
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": undefined,
          "fontSize": 14,
          "fontWeight": "400",
        },
        Array [
          Object {
            "marginBottom": 8,
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    Bang!
  </Text>
  <View
    style={
      Object {
        "marginTop": 8,
      }
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "borderRadius": 4,
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
            },
            Object {
              "backgroundColor": "#3f51b5",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": undefined,
                "fontSize": 14,
                "fontWeight": "500",
                "textAlign": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#fff",
              },
            ]
          }
        >
          Retry
        </Text>
      </View>
    </View>
  </View>
</View>
`;
